@@ -1,18 +1,23 @@
 package com.TrainX.TrainX.User;
 
 import com.TrainX.TrainX.caminoFitness.CaminoFitnessEntity;
+import com.TrainX.TrainX.desafioSemanal.DesafioCompletion;
+import com.TrainX.TrainX.desafioSemanal.DesafioSemanal;
 import com.TrainX.TrainX.level.LevelEntity;
 import com.TrainX.TrainX.xpFitness.XpFitnessEntity;
 import jakarta.persistence.*;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 @Entity
 @Table(name = "users")
+@Data
+@NoArgsConstructor
 public class UserEntity implements UserDetails {
 
     @Id
@@ -21,6 +26,9 @@ public class UserEntity implements UserDetails {
 
     @Column(nullable = false, unique = true)
     private String username;
+
+    @Column(nullable = false)
+    private String name;
 
     @Column(nullable = false)
     private String surname;
@@ -44,10 +52,10 @@ public class UserEntity implements UserDetails {
     private String address;
 
     @Column(nullable = false)
-    private Long coins;
+    private Long coins = 0L;
 
     @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "id_level")
+    @JoinColumn(name = "level_id")
     private LevelEntity level;
 
     @Column(nullable = false, unique = true)
@@ -70,16 +78,23 @@ public class UserEntity implements UserDetails {
     @JoinColumn(name = "camino_fitness_id", referencedColumnName = "idCF")
     private CaminoFitnessEntity caminoFitnessActual;
 
-    // One-to-One relation with XP Fitness (inverse side)
     @OneToOne(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     private XpFitnessEntity xpFitnessEntity;
 
-    // Constructors
-    public UserEntity() {
-        // Default constructor for JPA
-    }
+
+    @ManyToMany
+    @JoinTable(
+            name = "user_desafios",
+            joinColumns = @JoinColumn(name = "user_id"),
+            inverseJoinColumns = @JoinColumn(name = "desafio_id")
+    )
+    private Set<DesafioSemanal> desafiosCompletados = new HashSet<>();
+
+    @OneToMany(mappedBy = "usuario", cascade = CascadeType.ALL)
+    private Set<DesafioCompletion> historialDesafios = new HashSet<>();
 
     public UserEntity(String username,
+                      String name,
                       String email,
                       String surname,
                       String password,
@@ -94,6 +109,7 @@ public class UserEntity implements UserDetails {
                       Long coins,
                       Role role) {
         this.username = username;
+        this.name = name;
         this.email = email;
         this.surname = surname;
         this.password = password;
@@ -101,15 +117,13 @@ public class UserEntity implements UserDetails {
         this.phoneNumber = phoneNumber;
         this.height = height;
         this.weight = weight;
-        this.userPhoto = userPhoto;
+        this.userPhoto = "";
         this.sex = sex;
         this.address = address;
         this.coins = coins != null ? coins : 0L;
         this.isPublic = isPublic;
         this.role = role != null ? role : Role.USER;
     }
-
-    // Getters y setters omitidos para brevedad (mantener todos los originales)
 
     public void setXpFitnessEntity(XpFitnessEntity xpFitnessEntity) {
         this.xpFitnessEntity = xpFitnessEntity;
@@ -118,7 +132,6 @@ public class UserEntity implements UserDetails {
         }
     }
 
-    // Optional: Método para inicializar XP antes de persistir
     @PrePersist
     private void ensureXpFitness() {
         if (this.xpFitnessEntity == null) {
@@ -126,147 +139,10 @@ public class UserEntity implements UserDetails {
         }
     }
 
-    // Standard getters and setters
-    public Long getId() {
-        return id;
-    }
-
-    public String getUsername() {
-        return username;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
-    public String getSurname() {
-        return surname;
-    }
-
-    public void setSurname(String surname) {
-        this.surname = surname;
-    }
-
-    @Override
-    public String getPassword() {
-        return password;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public String getAge() {
-        return age;
-    }
-
-    public void setAge(String age) {
-        this.age = age;
-    }
-
-    public String getPhoneNumber() {
-        return phoneNumber;
-    }
-
-    public void setPhoneNumber(String phoneNumber) {
-        this.phoneNumber = phoneNumber;
-    }
-
-    public Long getHeight() {
-        return height;
-    }
-
-    public void setHeight(Long height) {
-        this.height = height;
-    }
-
-    public Long getWeight() {
-        return weight;
-    }
-
-    public void setWeight(Long weight) {
-        this.weight = weight;
-    }
-
-    public String getAddress() {
-        return address;
-    }
-
-    public void setAddress(String address) {
-        this.address = address;
-    }
-
-    public Long getCoins() {
-        return coins;
-    }
-
-    public void setCoins(Long coins) {
-        this.coins = coins;
-    }
-
-    public LevelEntity getLevel() {
-        return level;
-    }
-
-    public void setLevel(LevelEntity level) {
-        this.level = level;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getSex() {
-        return sex;
-    }
-
-    public void setSex(String sex) {
-        this.sex = sex;
-    }
-
-    public Boolean getIsPublic() {
-        return isPublic;
-    }
-
-    public void setIsPublic(Boolean isPublic) {
-        this.isPublic = isPublic;
-    }
-
-    public Role getRole() {
-        return role;
-    }
-
-    public void setRole(Role role) {
-        this.role = role;
-    }
-
-    public String getUserPhoto() {
-        return userPhoto;
-    }
-
-    public void setUserPhoto(String userPhoto) {
-        this.userPhoto = userPhoto;
-    }
-
-    public CaminoFitnessEntity getCaminoFitnessActual() {
-        return caminoFitnessActual;
-    }
-
-    public void setCaminoFitnessActual(CaminoFitnessEntity caminoFitnessActual) {
-        this.caminoFitnessActual = caminoFitnessActual;
-    }
-
-    public XpFitnessEntity getXpFitnessEntity() {
-        return xpFitnessEntity;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role.name());
+        return Collections.singletonList(authority);
     }
 
     @Override
